--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,10 @@ button{
   font-size: larger;
   margin-left: 15px;
 }
+span{
+  padding: 5px 15px;
+  background-color: orange;
+}
+#chatColor{
+  background-color: greenyellow;
+}
